Update compiler and run options